# open-screen-deck

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  requirements-docs.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
about/license/: index.html
about/related/: index.html
app/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
app/development/: index.html
app/e2e/: actions-modes.spec.ts  app-icon-cleanup.spec.ts  deck-editing.spec.ts  editing.spec.ts  helpers.ts  (+11 more)
app/src-tauri/: .gitignore  .updater-key.txt.pub  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: actions.rs  apps.rs  debuglog.rs  flash.rs  frontmost.rs  hotkeys.rs  lib.rs  mic.rs  permissions.rs  plugins.rs  serial.rs  stats.rs
docs/: assembly.md  companion_app.md  fab_checklist.md  index.md  mechanical_contract.md  pcb_design_brief.md  product_architecture.md  protocol.md  software_plan.md
firmware/: config.h  display.cpp  display.h  firmware.ino  input.cpp  input.h  main.cpp  media.cpp  media.h  orientation.cpp  orientation.h  pages.cpp  pages.h  protocol.cpp  protocol.h  state.cpp  state.h
hardware/: bom_assembly.csv  index.html
plugins/: README.md  index.html  registry.json
previews/: enclosure-top-shell.stl  index.html
profiles/: README.md
scripts/: build_firmware.sh  build_hardware.sh  generate_kicad_pcb.py  generate_kicad_schematic.py  hardware-preview.sh  stitch_gnd.py
search/: search_index.json
(+180 files in other folders)
