[package]
name = "open-screen-deck"
version = "0.1.0"
description = "Companion app for the Open Screen Deck macro pad"
authors = ["Open Screen Deck contributors"]
license = "MIT"
repository = "https://github.com/vcazan/open-screen-deck"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serialport = "4"
enigo = "0.6"
rdev = { version = "0.5", features = ["unstable_grab"] }
sysinfo = "0.33"
espflash = { version = "4", default-features = false, features = ["serialport"] }
ureq = { version = "2", features = ["tls"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  # IMMDevice::Activate is gated behind these two
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
